# mini-spice

./: .gitignore  README.md  pyproject.toml
mini_spice/: __init__.py  config.py  policy.py  rewards.py  roles.py  storage.py  trainer.py  verifier.py
mini_spice/cli/: __init__.py  prepare_corpus.py  run_eval.py  run_train.py
mini_spice/data/corpus/: .gitkeep  000000.txt  metadata.json
mini_spice/eval/: __init__.py  evaluate.py
mini_spice/eval/datasets/: .gitkeep  gsm8k-mini.json
tests/: __init__.py  test_gradients.py  test_parsing.py  test_rewards.py  test_separate_optimizers.py  test_verifier.py
